# CMake_Workshop_Exercise

./: CMakeLists.txt
external_lib/: CMakeLists.txt
external_lib/cmake_workshop_mqtt_lib-main/: CMakeLists.txt  README.md
external_lib/cmake_workshop_mqtt_lib-main/cmake_workshop_mqtt_lib-main/src/: mqtt_lib.cpp
external_lib/cmake_workshop_mqtt_lib-main/inc/: mqtt_lib.hpp
src/: board_definitions.hpp  main.cpp
